more quarkus tests forkArgs